Solved fight-system issues