@@ -16,25 +16,24 @@ public class Fight1V1 extends Fight{
         int turn =  0;
         while(team1.isAlive() && team2.isAlive()){
             turn = (int)(Math.random()*2);
-            Droid activeDroid1 = team1.getDroids().getFirst();
-            Droid activeDroid2 = team2.getDroids().getFirst();
+            Droid activeDroid1 = team1.getDroids().get(0);
+            Droid activeDroid2 = team2.getDroids().get(0);
             if(turn == 0 ){
                 if(activeDroid1 instanceof Healer healer){
-                    healer.heal(activeDroid2);
+                    healer.heal();
 
                 }
                 if(activeDroid1 instanceof Fighter fighter){
                     fighter.fight(activeDroid2);
-
                 }
 
 
             }else{
-                if(activeDroid1 instanceof Healer healer){
-                    healer.heal(activeDroid2);
+                if(activeDroid2 instanceof Healer healer){
+                    healer.heal();
                 }
-                if(activeDroid1 instanceof Fighter fighter){
-                    fighter.fight(activeDroid2);
+                if(activeDroid2 instanceof Fighter fighter){
+                    fighter.fight(activeDroid1);
                 }
 
             }
